# rendertoy3C

./: CMakeLists.txt  README.md
cuda/: random.h
src/: CMakeLists.txt  bxdf.h  cuda_accel.cpp  cuda_accel.h  cuda_buffer.h  cuda_mesh.cpp  cuda_mesh.h  cuda_texture.h  light.h  material.h  mesh.cpp  mesh.h  optix_context.h  wavefront.cpp  wavefront.h
src/cuda/: cuda_accel.h  cuda_buffer.cpp  cuda_buffer.h  cuda_mesh.h  cuda_scene.h  cuda_stream.h  cuda_texture.h  cuda_utils.h  optix_context.h
src/gui/: display.cpp  display.h
src/shader/: closehit_radiance.cu  miss.cu  raygen.cu  shader_common.h  shader_data.h  test.cu
src/util/: exception.h  math.h  sampling.h  type.h
sutil/: GLDisplay.cpp  sutil.cpp  vec_math.h
